welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:10: error: type mismatch;
 found   : Unit
 required: Boolean
			if (temp >= 60 && temp <= 100) {
                        ^squirrelPlay:9: error: type mismatch;
 found   : Unit
 required: Boolean
		if (isSummer == true) {
                ^